Fixes issue #1305 - Run applications in a JPMS way (#1402)
* Running wars in JPMS way

* Update copyright year

* Improve handling resources from modules

* Find resources in module

We need to override the findClass and findResource because the parent
implementation always returns null unless the "moduleName" is null,
so it searches only in the unnamed module.

These methods are called mainly by the ServiceLoader in order
to find classes/resouces in a module.

* Rework module definition

To simplify our migration, we can use our classloader instead
of the classloader provided by the JDK if we use the
ModuleLayer.defineModules instead of
ModuleLayer.defineModulesWithOneLoader

This simplifies the code as we can use the classloader as normal
as we don't need to change the classloader used by the application

* Move JPMS integration to a new module

* Add tests to ModuleFinder

* Move module from JPMS to Modular

* Add AliasedNamedResource

This wrapper allows to return a specific value for the Resource::getName

* Disable running in modular by default

It is possible to enable by setting the property
cloud.piranha.modular.enable to true

* Add manifest entry Add-Opens to shorten the command line

Without this manifest entry, it would be needed to add
two --add-opens to the invocation of the Piranha Micro

* Allow change the options of the layer via properties

Co-authored-by: manorrock <mriem@manorrock.com>